# personality-analysis

./: .cursorrules  .gitignore  GIT_COMMIT_GUIDE.md  PROJECT_CLEANUP_REPORT.md  PROJECT_STATUS_REPORT.md  PROJECT_SUMMARY.md  README.md  README_啟動說明.md  Scratchpad.md  mbti_stat_check.txt  mbti_stat_check4.txt  mbti_stat_check5.txt  mbti_stat_check6.txt  question_stats.txt  start.bat
backend/: README.md  add_question_example.py  check_data.py  complete_api_with_reports.py  create_migration.py  create_test_data.py  env.example  init_db.py  main.py  pyproject.toml  requirements.txt  run_all.ps1  simple_test.py  start_server.bat  test_api.py  test_complete_api.py  test_comprehensive_analysis.py  test_db_connection.py  test_new_api.py
backend/app/: main.py
backend/archive/: README.md
backend/data/: BIG5_questions.json  BIG5_questions_final.json  DISC_questions.json  DISC_questions_final.json  MBTI_questions.json  MBTI_questions_final.json  auto_fill_mbti_questions.py  enneagram_questions.json  enneagram_questions_final.json  personality_questions.py
backend/docs/: README.md  analysis_comparison_table.md  analysis_result_guidelines.md  big5_combination_guide.md  disc_analysis_guide.md  enneagram_analysis_guide.md  final_cleanup_summary.md  final_completion_report.md  mbti_analysis_guide.md
backend/scripts/: check_db_tables.py  check_disc_options.py  check_duplicate_questions.py  check_duplicates.py  check_enneagram_questions.py  fix_disc_options.py  import_final_questions.py  init_db.py  insert_new_questions.py  optimize_enneagram_questions.py  show_questions.py  (+2 more)
(+71 files in other folders)
