[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Johnny <yhsuan06@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.116.1"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
sqlalchemy = "^2.0.41"
pydantic = "^2.11.7"
alembic = "^1.16.4"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.1.1"
pytest = "^8.4.1"
requests = "^2.32.4"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
